<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#dfdfe7" >

    <LinearLayout
        android:id="@+id/LinearLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textViewHeading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="50dp"
            android:text="@string/Lib_Feedback_form"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:typeface="serif" />

        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/lay_bg"
                android:orientation="vertical"
                android:padding="15dp" >

                <TextView
                    android:id="@+id/tvName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="2dp"
                    android:gravity="left"
                    android:text="@string/Lib_Name"
                    android:textColor="@color/black" />

                <EditText
                    android:id="@+id/etName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="text"
                    android:maxLength="50" >
                    <requestFocus/>
                </EditText>

                <TextView
                    android:id="@+id/tvEmailId"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="2dp"
                    android:gravity="left"
                    android:text="@string/Lib_EmailId"
                    android:textColor="@color/black" />

                <EditText
                    android:id="@+id/etEmailId"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textEmailAddress"
                    android:maxLength="70" />

                <TextView
                    android:id="@+id/tvPhone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="2dp"
                    android:gravity="left"
                    android:text="@string/Lib_Phone"
                    android:textColor="@color/black" />

                <EditText
                    android:id="@+id/etPhone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="number"
                    android:maxLength="10" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:id="@+id/tvMsg"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="2dp"
                        android:gravity="left"
                        android:text="@string/Lib_Message"
                        android:textColor="@color/black" />

                    <TextView
                        android:id="@+id/textViewCharCount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:text="500"
                        android:textColor="@color/black" />

                </LinearLayout>

                <EditText
                    android:id="@+id/etMsg"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="top|left"
                    android:inputType="textMultiLine"
                    android:maxLength="500"
                    android:minLines="5"
                    android:scrollHorizontally="false"
                    android:scrollbars="vertical"
                    android:singleLine="false" />
            </LinearLayout>

            <Button
                android:id="@+id/butSend"
                style="@style/common_button_style"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="@drawable/button_bg"
                android:onClick="goToSend"
                android:text="@string/Lib_Send" />

            <Button
                android:id="@+id/butCancel"
                style="@style/common_button_style"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:background="@drawable/button_bg"
                android:onClick="goToCancel"
                android:text="@string/lib_cancel" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>